--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
     "\n",
     "trace_x_squared = function_values_trace(x_squared, six)\n",
     "layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
-    "tr\n",
+    "trace_x_squared['mod']\n",
     "plot([trace_x_squared], layout)"
    ]
   },
