--- a/index.ipynb
+++ b/index.ipynb
@@ -257,6 +257,7 @@
     "delta_layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
     "x_squared_delta_traces = delta_traces(x_squared, 2, line_length = 2, delta_x = 1)\n",
     "delta_traces['text_position'] = 'middle_center'\n",
+    "trace_x_squared['']\n",
     "plot([trace_x_squared, *x_squared_delta_traces], delta_layout)"
    ]
   },
