--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
     "delta_layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
     "x_squared_delta_traces = delta_traces(x_squared, 2, line_length = 2, delta_x = 1)\n",
     "trace_x_squared['text_position'] = 'middle_center'\n",
-    "plot([trace_x_squared, *x_squared_delta_traces], delta_layout, 'text_position': 'middle_center')"
+    "plot([trace_x_squared, *x_squared_delta_traces], delta_layout, 'text_position''middle_center')"
    ]
   },
   {
