--- a/index.ipynb
+++ b/index.ipynb
@@ -222,15 +222,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-2dcad8b1f7a4>, line 6)",
+     "evalue": "invalid syntax (<ipython-input-11-7b3d335413bd>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-2dcad8b1f7a4>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    plot([trace_x_squared, *x_squared_delta_traces], delta_layout, 'text_position': 'middle_center')\u001b[0m\n\u001b[0m                                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-7b3d335413bd>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    plot([trace_x_squared, *x_squared_delta_traces], delta_layout, 'text_position':'middle_center')\u001b[0m\n\u001b[0m                                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
     "delta_layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
     "x_squared_delta_traces = delta_traces(x_squared, 2, line_length = 2, delta_x = 1)\n",
     "trace_x_squared['text_position'] = 'middle_center'\n",
-    "plot([trace_x_squared, *x_squared_delta_traces], delta_layout, 'text_position''middle_center')"
+    "plot([trace_x_squared, *x_squared_delta_traces], delta_layout, 'text_position':'middle_center')"
    ]
   },
   {
