--- a/index.ipynb
+++ b/index.ipynb
@@ -222,15 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-7b3d335413bd>, line 6)",
+     "ename": "TypeError",
+     "evalue": "plot() takes from 1 to 2 positional arguments but 3 were given",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-7b3d335413bd>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    plot([trace_x_squared, *x_squared_delta_traces], delta_layout, 'text_position':'middle_center')\u001b[0m\n\u001b[0m                                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-0477327011e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx_squared_delta_traces\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdelta_traces\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_squared\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline_length\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtrace_x_squared\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'text_position'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'middle_center'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrace_x_squared\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0mx_squared_delta_traces\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta_layout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'text_position'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: plot() takes from 1 to 2 positional arguments but 3 were given"
      ]
     }
    ],
@@ -240,7 +243,7 @@
     "delta_layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
     "x_squared_delta_traces = delta_traces(x_squared, 2, line_length = 2, delta_x = 1)\n",
     "trace_x_squared['text_position'] = 'middle_center'\n",
-    "plot([trace_x_squared, *x_squared_delta_traces], delta_layout, 'text_position':'middle_center')"
+    "plot([trace_x_squared, *x_squared_delta_traces], delta_layout, 'text_position')"
    ]
   },
   {
