--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,8 @@
     "x_squared_delta_traces = delta_traces(x_squared, 2, line_length = 4, delta_x = 1)\n",
     "\n",
     "layout = build_layout(x_axis = {'title': 'number of seconds', 'range': [1.5, 4]}, y_axis = {'title': 'distance', 'range': [0, 12]})\n",
-    "theplotplot([trace_x_squared, *x_squared_delta_traces ], layout)"
+    "theplot = plot([trace_x_squared, *x_squared_delta_traces ], layout)\n",
+    "theplot['text_position']"
    ]
   },
   {
