automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
     "\n",
     "layout = build_layout(x_axis = {'title': 'number of seconds', 'range': [1.5, 4]}, y_axis = {'title': 'distance', 'range': [0, 12]})\n",
     "theplot = plot([trace_x_squared, *x_squared_delta_traces ], layout)\n",
-    "theplot['text_position'] = 'middle_center'"
+    "theplot['text_position'] = 'middle_center'\n"
    ]
   },
   {
