--- a/index.ipynb
+++ b/index.ipynb
@@ -496,12 +496,12 @@
     "from calculus import derivative_trace\n",
     "\n",
     "tangent_x_squared_trace = derivative_trace(x_squared, 2, 2, 1)\n",
-    "tangent_x_squared_trace['mode'] = ''\n",
+    "tangent_x_squared_trace['mode'] = 'lines'\n",
     "x_squared = [(1, 2)]\n",
     "range_twenty_four = list(range(0, 25))\n",
     "six = list(map(lambda x: x/4.0, range_twenty_four))\n",
-    "\n",
     "trace_x_squared = function_values_trace(x_squared, six)\n",
+    "trace_x\n",
     "layout_not_tangent = build_layout(x_axis = {'range': [0, 4]}, y_axis = {'range': [0, 10]})\n",
     "plot([trace_x_squared, tangent_x_squared_trace], layout_not_tangent)"
    ]
