--- a/index.ipynb
+++ b/index.ipynb
@@ -502,6 +502,7 @@
     "six = list(map(lambda x: x/4.0, range_twenty_four))\n",
     "trace_x_squared = function_values_trace(x_squared, six)\n",
     "trace_x_squared['mode'] = 'lines'\n",
+    "trace_x_squared[te]\n",
     "layout_not_tangent = build_layout(x_axis = {'range': [0, 4]}, y_axis = {'range': [0, 10]})\n",
     "plot([trace_x_squared, tangent_x_squared_trace], layout_not_tangent)"
    ]
