automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,7 @@
     "\n",
     "tangent_x_squared_trace = derivative_trace(x_squared, 2, 2, 1)\n",
     "tangent_x_squared_trace['mode'] = 'lines'\n",
-    "tangent\n",
+    "tangent_x_squared['text_position'] = 'center bottom'\n",
     "x_squared = [(1, 2)]\n",
     "range_twenty_four = list(range(0, 25))\n",
     "six = list(map(lambda x: x/4.0, range_twenty_four))\n",
