--- a/index.ipynb
+++ b/index.ipynb
@@ -497,13 +497,13 @@
     "\n",
     "tangent_x_squared_trace = derivative_trace(x_squared, 2, 2, 1)\n",
     "tangent_x_squared_trace['mode'] = 'lines'\n",
-    "tangent_x_squared_trace['textposition'] = 'center bottom'\n",
+    "tangent_x_squared_trace['textposition'] = 'bottom center'\n",
     "x_squared = [(1, 2)]\n",
     "range_twenty_four = list(range(0, 25))\n",
     "six = list(map(lambda x: x/4.0, range_twenty_four))\n",
     "trace_x_squared = function_values_trace(x_squared, six)\n",
     "trace_x_squared['mode'] = 'lines'\n",
-    "trace_x_squared['textposition'] = 'center bottom'\n",
+    "trace_x_squared['textposition'] = 'cbottom'\n",
     "layout_not_tangent = build_layout(x_axis = {'range': [0, 4]}, y_axis = {'range': [0, 10]})\n",
     "plot([trace_x_squared, tangent_x_squared_trace], layout_not_tangent)"
    ]
