--- a/index.ipynb
+++ b/index.ipynb
@@ -660,8 +660,9 @@
     "\n",
     "trace_x_squared_to_three = function_values_trace(x_squared, three)\n",
     "trace_x_squared_to_three['mode'] = 'lines'\n",
-    "trace_x_squared_to_three['textposition'] = 'bottom center''\n",
+    "trace_x_squared_to_three['textposition'] = 'bottom center'\n",
     "tangent_x_squared = derivative_trace(x_squared, 2, 1, 1)\n",
+    "tangent_x_squared[]\n",
     "tangent_x_squared_delta_tenth = derivative_trace(x_squared, 2, 1, .1)\n",
     "subplots = make_subplots([trace_x_squared_to_three, tangent_x_squared], [trace_x_squared_to_three, tangent_x_squared_delta_tenth])\n",
     "subplots"
