--- a/index.ipynb
+++ b/index.ipynb
@@ -662,7 +662,8 @@
     "trace_x_squared_to_three['mode'] = 'lines'\n",
     "trace_x_squared_to_three['textposition'] = 'bottom center'\n",
     "tangent_x_squared = derivative_trace(x_squared, 2, 1, 1)\n",
-    "tangent_x_squared[]\n",
+    "tangent_x_squared['mode'] = 'lines'\n",
+    "tangent_x_squared['textposit']\n",
     "tangent_x_squared_delta_tenth = derivative_trace(x_squared, 2, 1, .1)\n",
     "subplots = make_subplots([trace_x_squared_to_three, tangent_x_squared], [trace_x_squared_to_three, tangent_x_squared_delta_tenth])\n",
     "subplots"
