--- a/index.ipynb
+++ b/index.ipynb
@@ -665,7 +665,7 @@
     "tangent_x_squared['mode'] = 'lines'\n",
     "tangent_x_squared['textposition'] = 'bottom center'\n",
     "tangent_x_squared_delta_tenth = derivative_trace(x_squared, 2, 1, .1)\n",
-    "tangent_x_squared_delta_tenth\n",
+    "tangent_x_squared_delta_tenth['mode'] = 'lines'\n",
     "tangent_x_squared_delta_tenth\n",
     "subplots = make_subplots([trace_x_squared_to_three, tangent_x_squared], [trace_x_squared_to_three, tangent_x_squared_delta_tenth])\n",
     "subplots"
