--- a/index.ipynb
+++ b/index.ipynb
@@ -879,10 +879,10 @@
    ],
    "source": [
     "tangent_x_squared_delta_hundredth = derivative_trace(x_squared, 2, 1, .01)\n",
-    "tangent_x_squared_delta_hundredth\n",
+    "tangent_x_squared_delta_hundredth['mode'] = 'lines'\n",
     "tangent_x_squared_delta_hundredth\n",
     "tangent_x_squared_delta_thousandth = derivative_trace(x_squared, 2, 1, .001)\n",
-    "tangent_x_squared_delta_thousandth\n",
+    "tangent_x_squared_delta_thousandth['mode'] = 'lines'\n",
     "tangent_x_squared_delta_thousandth\n",
     "subplots = make_subplots([trace_x_squared_to_three, tangent_x_squared_delta_hundredth], [trace_x_squared_to_three, tangent_x_squared_delta_thousandth])"
    ]
