automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -880,7 +880,7 @@
    "source": [
     "tangent_x_squared_delta_hundredth = derivative_trace(x_squared, 2, 1, .01)\n",
     "tangent_x_squared_delta_hundredth['mode'] = 'lines'\n",
-    "tangent_x_squared_delta_hundredth\n",
+    "tangent_x_squared_delta_hundredth['textposition'] = 'bottom center'\n",
     "tangent_x_squared_delta_thousandth = derivative_trace(x_squared, 2, 1, .001)\n",
     "tangent_x_squared_delta_thousandth['mode'] = 'lines'\n",
     "tangent_x_squared_delta_thousandth\n",
